--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,8 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
-
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/ferr-logo.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/ferr-logo.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/ferr-logo.png">
+<link rel="shortcut icon" href="/assets/images/ferr-logo.png">
 <!-- end custom head snippets -->
