--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,3 +1,4 @@
+{% unless post.unlisted %}
 {% if post.header.teaser %}
   {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
 {% else %}
@@ -28,3 +29,4 @@
     {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
   </article>
 </div>
+{% endunless %}
